--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@doko-js/utils": "^1.0.0",
     "@doko-js/wasm": "^1.2.0",
     "@provablehq/sdk": "^0.6.9",
+    "aleo-hasher": "^0.1.2",
     "dotenv": "^16.5.0",
     "zod": "^3.24.3"
   },
